fix: avoid model name left overflow

--- a/style.css
+++ b/style.css
@@ -823,7 +823,7 @@ svg {
 }
 
 .category-bar-label {
-    width: 250px;
+    width: 300px;
     text-align: right;
     font-size: 0.9rem;
     font-weight: 500;
